Added squares template

--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,12 @@ footer {
     height: 500px;
     background-color: red;
 }
+
+.square {
+    width: calc(100% / 10);
+    height: calc(100% / 10);
+    border:1px solid black;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
