--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ footer {
 }
 
 .square {
+    transition:0.3s;
     width: calc(100% / 10);
     height: calc(100% / 10);
     border:1px solid black;
@@ -45,6 +46,7 @@ footer {
 .bomb {
     background-color: red;
     color:white;
+    transition:0s;
 }
 
 .unchecked {
