--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ footer {
     align-items: center;
     justify-content: center;
     cursor:crosshair;
+    aspect-ratio: 1/1;
 }
 
 .checked {
@@ -57,4 +58,29 @@ footer {
 .minibomb {
     width: 50px;
     height: 50px;
+}
+
+@media screen and (max-width:700px) {
+    .grid {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .input-group-text {
+        display:none;
+    }
+
+    .input-group {
+        flex-flow:column;
+        width: 100px;
+
+
+    }
+
+    #selectform {
+        width: 100px;
+
+    }
 }
